# meme

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  ui-dashboard-preview.html  ui-preview.html
mac-server/: .env.example  .gitignore  claude_adapter.py  codex_adapter.py  doubao_asr.py  doubao_streaming.py  paste.py  run_server.sh  server.py
mic-test/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
mic-test/main/: CMakeLists.txt  buttons.cpp  buttons.h  chime.cpp  chime.h  claude_pet_assets.cpp  claude_pet_assets.h  codex_pet_assets.cpp  codex_pet_assets.h  diana_pet_assets.h  display.cpp  display.h  idf_component.yml  kitty_pet_assets.h  logo_claude.c  logo_codex.c  main.cpp  nier_pet_assets.h  wifi.cpp  wifi.h  ws_client.cpp  ws_client.h
